kubernetes/apps/media/base/lrcget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lrcget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lrcget
  template:
    metadata:
      labels:
        app: lrcget
    spec:
      nodeSelector:
        stack.arr: "arr-1"
      containers:
        - name: lrcget
          image: gtt1229/docker-lrcget:1.0.2@sha256:361b156e7ced1141e3efb9fd7c45ae9d3635cbafb67ec02d35bb9a67b96edab5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5800
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /music
              subPath: music
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lrcget-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
