kubernetes/apps/media/base/lrcget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lrcget
spec:
  selector:
    app: lrcget
  ports:
    - protocol: TCP
      port: 5800
      targetPort: 5800
