kubernetes/apps/media/base/lrcget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lrcget
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: lrcget.homelab.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lrcget
                port:
                  number: 5800

  tls:
    - hosts:
        - lrcget.homelab.leehosanganson.dev
      secretName: lrcget-tls
